--- a/css/todo.style.css
+++ b/css/todo.style.css
@@ -4,14 +4,17 @@
 
 body {
     display: grid;
-    grid-template-rows: 100px 1fr;
+    grid-template-rows: 100px 0 1fr;
 
 
     background-size: cover;
-    max-width: 100vw;
-    max-height: 100vh;
+    width: 100vw;
+    height: 100vh;
 
     background-color: blanchedalmond;
+    background-repeat: no-repeat;
+    background-position: center;
+
 }
 
 body,
@@ -114,9 +117,9 @@ header {
 
 #item-list li {
     display: grid;
-    grid-template-columns: 50px 1fr 50px 50px;
+    grid-template-columns: 50px 1fr 50px;
     grid-template-rows: 100%;
-
+    align-items: center;
 
     list-style-type: none;
     background: white;
@@ -149,7 +152,7 @@ header {
 }
 
 .list-checked-checkbox:checked {
-    background-color: red;
+    background-color: black;
     border: 1px solid black;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), inset 0px -15px 10px -12px rgba(0, 0, 0, 0.05), inset 15px 10px -12px rgba(255, 255, 255, 0.1);
     color: #99a1a7;
